# minions-ptv

./: .gitignore  README.md  generateCheckerboard.py  generatePattern.py
calibration/: CMakeLists.txt  README.md  calibrateCameraMat.m  generateCylinder.m  generateSphere.m  main.cpp  params.mat  simulateParticles.m  test3D.m
calibration/good_photos/: list.txt
external_stereo_capture/: CMakeLists.txt  README.md  main.cpp  main_single.cpp.bak  read_img.m  run_cmd.sh  tcamcamera.cpp  tcamimage.cpp
focus/single_cam/: CMakeLists.txt  README.md  main.cpp
focus/stereo_cam/: CMakeLists.txt  README.md  main.cpp
ptv/: analyzeTrack.m  binarizeEvaluation.m  computeESD.m  computeLinearRegression.m  createVideo.m  d_evaluate.m  d_simulate.m  detectParticles.m  drawTraceFigure.m  drawTraces.m  evaluate.m  evaluation.m  generateCentroids.m  generateCylinder.m  generateSphere.m  inBoundary2D.m  indexTraces.m  m_evaluate.m  m_simulate.m  main.m  matchTracksPTVtoSim.m  mergeLostTracks.m  meta_evaluate.m  particleTrace.m  project2Dto3D.m  projectPoints.m  ptv.m  rotateCloud.m  runPTV.m  runPTV.m.bak  simulateParticles.m  simulateParticles.m.bak  simulationParameters.m  simulator.m  simulator.m.bak  tracks.mat  tracksComputed.mat  tracksSimulated.mat  updateTracks.m  updateTracksPTV.m  (+1 more)
ptv/simulations/: CMakeLists.txt  simulations.cpp
